--- a/styles.css
+++ b/styles.css
@@ -68,12 +68,12 @@ a:hover {
    height:300px;
    width: 300px;
 }
-img {
+#about-img {
     max-height: 400px;
     max-width: 400px;
     object-fit: cover;
 }
-p {
+#about-p {
     opacity: 60%;
 }
 
