--- a/styles.css
+++ b/styles.css
@@ -72,6 +72,7 @@ a:hover {
     max-height: 400px;
     max-width: 400px;
     object-fit: cover;
+    border-radius: 100%;
 }
 #about-p {
     opacity: 60%;
